--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start-dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "Tharusha Gimhana Amaraweera",
   "license": "ISC",
